--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
-CHANGELOG:
+# This changelog is only to document changes in pricing or features
+
 05.2017
 - Updated pricing of Sentry, Gitlab, Bitbucket (bad news, all of them got more expensive)
