--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,11 +1,40 @@
 # This changelog is only to document changes in pricing or features
 
-10.2017
+## 10.2018
+* Hosting
+    - Updated prices for DigitalOcean, Linode and Amazon Lightsail. They all offer more resources - more RAM or disk space for the same price (and some of the changes are quite impressive - for example DigitalOcean doubled the amount of RAM in each plan).
+    - Added GCE to the free tier. They offer a small f1-micro machine for free forever - it's more than enough to run a website with a small traffic.
+    - Amazon Lightsail offers now a $3.5 plan with 512 MB of RAM, 1 CPU, 20 GB SSD and 1 TB of transfer (not mentioned on DeployStack website, but I thought that maybe you want to know).
+    - For $15 DigitalOcean offers 3 different configurations (3 GB RAM and 1 CPU / 2 GB RAM and 2 CPUs / 1 GB RAM and 3 CPUs), which can give you some nice flexibility - if you are running one of those configurations and you notice that you are not using much of the CPU but a lot of RAM, you can easily switch the instance to a more suitable configuration (here is how you can switch from one type of VM to another: https://www.digitalocean.com/docs/images/snapshots/how-to/migrate-droplets/).
+* Domains
+    - Namecheap and Namesilo are currently running sales on many of their domains where the first time registration is cheaper (around $2 cheaper for the most popular domains like .com, .org, but even up to $30 cheaper for domains like .pizza), which is a pretty nice deal if you are thinking about buying a domain now.
+    - Namecheap has slightly increased the prices of their domains (from $0.50 for the most popular domain up to $2 for less popular ones).
+    - Exactly the next day after I updated the information about 1&1, they rebranded to ionos and changed prices (well, they actually changed everything - the name, business model, their website, etc.), so I had to update the information again 😕.
+* Monitoring
+    - Both UptimeRobot and StatusCake improved their paid SMS credits offers (UptimeRobot doubled the amount of SMS and StatusCake halved their prices).
+    - Added information about status pages (free for UptimeRobot and paid for StatusCake).
+* Files storage
+    - AWS S3 glacier storage is now cheaper (around $0.004-0.005 per GB/month, comparing to $0.007-0.012 that was before).
+* CDN
+    - AWS Cloudfront now has 132 Points of Presence (up from 87).
+    - MaxCDN has been acquired by StackPath and since I couldn't find a good replacement for it, I have limited the "Monthly plans" section to only CloudFlare. While reviewing the available CDN services, I have extended the "Pay as you go" section to also include the KeyCDN (that has a slightly cheaper prices than CDN77 and requires lower yearly recharge than CDN77).
+* Errors
+    - Sentry decreased the amount of errors per month in the "free plan", but at the same time they increased the log retention from 7 to 30 days.
+    - Rollbar slightly decreased the price of the paid plan (from $49 to $41).
+    - Airbrake has removed their hidden free plan (that was before available under https://airbrake.io/account/new/free URL), so I have removed the Airbrake from the list.
+* Emails
+    - Both Mailchimp and SendinBlue provide "automation" emails that allow you to automate your workflows based on users' actions (a welcome email, a mini tutorial split into 5 emails, etc.).
+    - While SendinBlue support only 300 emails sent per day, which might be a problem if you have more than 300 people on your mailing list, they also have a Reque feature (https://help.sendinblue.com/hc/en-us/articles/209421725-What-does-the-Requeue-feature-do-), that will allow you to continue sending the emails to your mailing list on the next day (when your daily emails quota is renewed).
+    - Mailgun offers a 100 validations for free every month (so you can verify that an email actually exists) and two types of plans: monthly plans or "pay as you go".
+* Static websites
+    - Surge now offers a professional plan for $30/month, where you can have unlimited number of projects (previously it was $13/month per project).
+
+## 10.2017
 - Namesilo now has .io domains
 - Aerobatic has been removed (no more free plan)
 - Sparkpost has been removed (no more free plan)
 - Amazon SES 62k free emails are only free if you send them from an application hosted on EC2
 - Cloud computing services have added a lot of free stuff
 
-05.2017
+## 05.2017
 - Updated pricing of Sentry, Gitlab, Bitbucket (bad news, all of them got more expensive)
